crates/flux-codegen-swift/tests/snapshots/pipeline__pipeline_b3_10_generics.snap
---
source: crates/flux-codegen-swift/tests/pipeline.rs
expression: "codegen_example(name, src)"
---
import SwiftUI
enum FluxTheme {
    static let colorPrimary = Color(red: 0.404, green: 0.314, blue: 0.643)
    static let colorSecondary = Color(red: 0.384, green: 0.357, blue: 0.443)
    static let colorSurface = Color(red: 0.996, green: 0.969, blue: 1.0)
    static let spaceSm: CGFloat = 4
    static let spaceMd: CGFloat = 8
    static let spaceLg: CGFloat = 16
    static let textBody: CGFloat = 17
    static let textTitle: CGFloat = 28
}

struct List<T: Hashable>: View {
    let items: [T]
    var body: some View {
  VStack {
      ForEach(items, id: \.self) { _ in
          Text("item")
      }
  }
    }
}
