crates/flux-codegen-swift/tests/snapshots/pipeline__pipeline_b3_1_counter.snap
---
source: crates/flux-codegen-swift/tests/pipeline.rs
assertion_line: 79
expression: "codegen_example(name, src)"
---
struct Counter: View {
    @State private var count: Int = 0
    var body: some View {
  VStack {
      Text("Count: \(count)")
      Button(action: {}) {
          Text("")
      }
  }
    }
}
