crates/flux-codegen-swift/tests/snapshots/pipeline__pipeline_b3_2_button.snap
---
source: crates/flux-codegen-swift/tests/pipeline.rs
expression: "codegen_example(name, src)"
---
struct Tapped: View {
    @State private var taps: Int = 0
    var body: some View {
  Button(action: { taps = (taps + 1) }) {
      Text("Tapped \(taps) times")
  }
    }
}
