crates/flux-codegen-swift/tests/snapshots/pipeline__pipeline_b3_9_state.snap
---
source: crates/flux-codegen-swift/tests/pipeline.rs
assertion_line: 127
expression: "codegen_example(name, src)"
---
struct Toggle: View {
    @State private var on: Bool = false
    var body: some View {
  Button(action: {}) {
      Text("")
  }
    }
}
